--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="./css/myreset.css" />
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon" />
     <script src="./js/apikey.js" defer></script>
     <script src="./js/common.js" defer></script>
