[FIX] 상세페이지 영양성분 grid 수정

--- a/detail.html
+++ b/detail.html
@@ -22,19 +22,18 @@
         <img id="mainImg" src="./img/noimage.png" />
         <div class="divWrap">
           <p class="cate">반찬</p>
-          <div class="nutritionInfo">
-            <h2 class="info">영양성분</h2>
-            <div class="value"></div>
-            <div class="info">칼로리</div>
-            <p class="value">200kcal</p>
-            <div class="info">탄수화물</div>
-            <p class="value">200kcal</p>
-            <div class="info">지방</div>
-            <p class="value">200kcal</p>
-            <div class="info">단백질</div>
-            <p class="value">200kcal</p>
-            <div class="info">나트륨</div>
-            <p class="value">200kcal</p>
+          <div class="nutritionGrid">
+            <p class="nutrition">영양성분</p>
+            <p class="nutrition nuteType">칼로리</p>
+            <p class="nutrition nuteValue">200kcal</p>
+            <p class="nutrition nuteType">탄수화물</p>
+            <p class="nutrition nuteValue">200kcal</p>
+            <p class="nutrition nuteType">지방</p>
+            <p class="nutrition nuteValue">200kcal</p>
+            <p class="nutrition nuteType">단백질</p>
+            <p class="nutrition nuteValue">200kcal</p>
+            <p class="nutrition nuteType">나트륨</p>
+            <p class="nutrition nuteValue">200kcal</p>
           </div>
         </div>
       </section>
@@ -42,12 +41,12 @@
       <section class="secondRow">
         <div class="ingredients">
           <h2>재료</h2>
-          <input type="checkbox" />연두부75g(3/4모)<br />
-          <input type="checkbox" />칵테일새우 20g(5마리)<br />
-          <input type="checkbox" />달걀30g(1/2개)<br />
-          <input type="checkbox" />생크림 13g(1큰술)<br />
-          <input type="checkbox" />설탕50g(1작은술)<br />
-          <input type="checkbox" />고명 시금치 10g(3줄기)<br />
+          <input type="checkbox" /> 연두부75g(3/4모)<br />
+          <input type="checkbox" /> 칵테일새우 20g(5마리)<br />
+          <input type="checkbox" /> 달걀30g(1/2개)<br />
+          <input type="checkbox" /> 생크림 13g(1큰술)<br />
+          <input type="checkbox" /> 설탕50g(1작은술)<br />
+          <input type="checkbox" /> 고명 시금치 10g(3줄기)<br />
         </div>
         <div class="tip">
           <h2>저감 요리법 TIP</h2>
