--- a/detail2.html
+++ b/detail2.html
@@ -26,7 +26,7 @@
       <section class="titleSection">
         <span class="cate">반찬</span>
         <div class="titleWrap">
-          <h1>스트로베리 샐러드</h1>
+          <h1 id="menuName"></h1>
           <div class="btns">
             <i class="fa-solid fa-bookmark"></i>
             <i class="fa-solid fa-share-nodes"></i>  
