--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon" />
     <script src="./js/apikey.js" defer></script>
     <script src="./js/common.js" defer></script>
+    <script src="./js/main.js" defer></script>
   </head>
   <body>
     <header class="hd" id="hd">
@@ -54,6 +55,9 @@
           </div>
           <div class="category" id="category6">
             <p>후식</p>
+          </div>
+          <div class="category" id="category7">
+            <p>기타</p>
           </div>
         </div>
 
@@ -147,9 +151,9 @@
     </main>
     <footer id="footer">
       <div class="footCon">
-        <img src="./img/social_facebook.svg" alt="" />
-        <img src="./img/social_instar.svg" alt="" />
-        <img src="./img/social_mail.svg" alt="" />
+        <img id="imgFacebook" src="./img/social_facebook.svg" alt="" />
+        <img id="imgInstagram" src="./img/social_instar.svg" alt="" />
+        <img id="imgMail" src="./img/social_mail.svg" alt="" />
       </div>
     </footer>
   </body>
