[FEAT]메뉴검색기능추가

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <h2>카테고리</h2>
         <div class="categoryList">
-          <div class="category" id="category1">
+          <div class="category on" id="category1">
             <p>전체</p>
           </div>
           <div class="category" id="category2">
