[FIX]파일명변경

--- a/index.html
+++ b/index.html
@@ -64,71 +64,18 @@
         <div class="recipeCount" id="recipeCount"></div>
 
         <!-- 레시피 카드 -->
-        <ul class="cardListCon" id="cardListCon">
-          <!-- <li>
-            <div class="card" id="card1">
-              <img src="./img/recipe1.png" alt="" />
-              <h3>요리 이름1</h3>
-              <div>
-                <strong>200kcal</strong>
-                <p class="cate">카테고리1</p>
-              </div>
-              <a
-                class="more"
-                href="/detail2.html?RCP_NM='두부 곤약 나물 비빔밥'"
-                >자세히보기</a
-              >
-            </div>
-          </li>
-
-          <li>
-            <div class="card" id="card2">
-              <img src="./img/recipe1.png" alt="" />
-              <h3>요리 이름2</h3>
-              <div>
-                <strong>200kcal</strong>
-                <p class="cate">카테고리2</p>
-              </div>
-              <a
-                class="more"
-                href="/detail2.html?RCP_NM='두부 곤약 나물 비빔밥'"
-                >자세히보기</a
-              >
-            </div>
-          </li>
-          <li>
-            <div class="card" id="card3">
-              <img src="./img/recipe1.png" alt="" />
-              <h3>요리 이름3</h3>
-              <div>
-                <strong>200kcal</strong>
-                <p class="cate">카테고리3</p>
-              </div>
-              <a
-                class="more"
-                href="/detail2.html?RCP_NM='두부 곤약 나물 비빔밥'"
-                >자세히보기</a
-              >
-            </div>
-          </li> -->
-        </ul>
+        <ul class="cardListCon" id="cardListCon"></ul>
       </section>
       <!-- pagination -->
-      <div class="pageCon">
-        <!-- <button class="prev">이전</button>
-        <button class="on">1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button class="next">다음</button> -->
-      </div>
+      <div class="pageCon"></div>
     </main>
-    <!-- <footer id="footer">
+
+    <footer id="footer">
       <div class="footCon">
         <img id="imgFacebook" src="./img/social_facebook.svg" alt="" />
         <img id="imgInstagram" src="./img/social_instar.svg" alt="" />
         <img id="imgMail" src="./img/social_mail.svg" alt="" />
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
