--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/detail.css" />
+    <link rel="stylesheet" href="./css/detail.css" /> 
+    <script src="./js/apikey.js" defer></script>
+  
+    <script src="./js/common.js" defer></script>
     <script src="./js/detail.js" defer></script>
   </head>
   <body>
@@ -137,9 +140,9 @@
     
     <footer id="footer">
       <div class="footCon">
-        <img src="./img/social_facebook.svg" alt="" />
-        <img src="./img/social_instar.svg" alt="" />
-        <img src="./img/social_mail.svg" alt="" />
+        <img id="imgFacebook" src="./img/social_facebook.svg" alt="" />
+        <img id="imgInstagram" src="./img/social_instar.svg" alt="" />
+        <img id="imgMail" src="./img/social_mail.svg" alt="" />
       </div>
     </footer>
  
