[FIX]스타일 수정

--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/detail.css" /> 
     <script src="./js/apikey.js" defer></script>
-  
     <script src="./js/common.js" defer></script>
     <script src="./js/detail.js" defer></script>
   </head>
@@ -27,7 +26,7 @@
     </header>
     <main>
       <section class="titleSection">
-        <span class="cate">반찬</span>
+        <span class="cate" id="selectedCate"></span>
         <div class="titleWrap">
           <h1 id="menuName"></h1>
           <div class="btns">
