--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/myreset.css" />
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon" />
     <script src="./js/apikey.js" defer></script>
     <script src="./js/common.js" defer></script>
@@ -22,7 +22,7 @@
   <body>
     <header class="hd" id="hd">
       <div class="logoCon">
-        <img src="./img/logo2.svg" alt="" id="logo" />
+        <img src="./img/logoWithTitle.svg" alt="" id="logo" />
       </div>
       <div class="banner" id="banner"></div>
     </header>
